<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">

<TableLayout android:id="@+id/table" android:layout_height="wrap_content" android:layout_width="match_parent" android:background="#FF0000">

<TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="wrap_content">
<TextView android:textColor="#000" android:textStyle="bold" android:gravity="center_horizontal" android:background="#f00" android:layout_margin="1dip" android:id="@+id/textView1" android:layout_weight="0.3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/Participants"/>
</TableRow>

<TableRow android:id="@+id/tableRow2" android:layout_width="match_parent" android:layout_height="wrap_content">
<TextView android:background="#f00" android:layout_margin="1dip" android:id="@+id/textView2" android:layout_weight="0.3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:text="@string/NAME"/>
<TextView android:background="#f00" android:layout_margin="1dip" android:id="@+id/textView3" android:layout_weight="0.3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:text="@string/USN"/>
<TextView android:background="#f00" android:layout_margin="1dip" android:id="@+id/textView4" android:layout_weight="0.3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:text="@string/MOB"/>
<TextView android:background="#f00" android:layout_margin="1dip" android:id="@+id/textView5" android:layout_weight="0.3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:text="@string/EMAIL_ADDR"/>
</TableRow>

</TableLayout>


</ScrollView>