<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/mainlinear"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

  <ListView
       android:id="@+id/linear1"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">

    </ListView>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear2"
    android:visibility="gone"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/EName"
         />
    
    <EditText
        android:id="@+id/ename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EHint"
        />
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createEvent"
        android:text="@string/Create"/>
    
        </LinearLayout>
      </LinearLayout>